# TOPS

./: .buildinfo  .gitignore  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml  python-app.yml
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/tops/: index.html
binder/: environment.yml
develop/: forced_oscillations.py  forced_oscillations_replication.py  saturation_block.py
develop/dyn_loads/: const_power_load.py
develop/inherit_parameters/: inherit_parameters_test_1.py  inherit_parameters_test_2.py
develop/initialization/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6_tidy_up.py  test_7_one_at_a_time.py
develop/n44_model/: n44_new.py  n44_new_old_controls.py  n44_old.py  short_circuit.py
develop/parallelization/: test_1.py  test_2.py  test_3.py
docs/source/: conf.py  index.rst
dynpssimpy/: core.py  dynamic.py  gui.py  modal_analysis.py  plotting.py  real_time_sim.py  utility_functions.py
dynpssimpy/dyn_models/: __init__.py  avr.py  blocks.py  gen.py  gov.py  lines.py  loads.py  pss.py  trafos.py
dynpssimpy/ps_models/: ieee68.py
examples/acdc/: combine.py  combine_2.py  model.json  tops_circuits_test.py  tops_vsc.py  utils.py
examples/agc_example/: k2a_agc.py  line_Pref_change.py  load_step.py
examples/dyn_models/: const_power_loads.py  dyn_loads copy.py  dyn_loads.py  dyn_loads_constP.py  dyn_loads_constP_2.py  dyn_loads_constP_3.py  hygov_backlash.py  pll.py  tap_changer_trafo.py  trafos.py  vsc.py
examples/dyn_sim/: N45_base_script  N45_script_thesis  line_outage.py  load_step.py  short_circuit.py
examples/gov_sine_excitation/: short_circuit.py  vsc.py
examples/interfaces/: result_keeper.py  results_events.py  sim.py
examples/modal_analysis/: avr_linear_analysis.py  linear_vs_nonlinear_sim.py  linearize_inputs.py  linearize_inputs_outputs.py  linearize_outputs.py  linearize_outputs_2.py  plot_eigs.py  pss_linear_analysis.py  root_locus.py
examples/mygov_example/: load_step.py  load_step_sm_ib.py  mygov_vs_mygov2.py  sm_ib_mygov.py
examples/notebooks/: k2a-simple_dyn_sim.ipynb  modal_analysis.ipynb
examples/sde_solver/: sde_mcs_prarallel.py  sde_solver_1.py  sde_solver_2.py
examples/user_models/: pll.py  short_circuit.py  (+1 more)
inertia/: Basecase.py  HVDC_link_loss copy.py  HVDC_link_loss.py  Plot_Basecase.py  Plot_FFR_sensitivity.py  Plot_SC.py  Plot_SC_sensitivity.py  Plot_SI.py  Plot_SI_VSC_PQ.py  Plot_SI_sensitivity.py  Plot_Wind.py  Plot_Wind_and_SC_sensitivity.py  Plot_freq copy.py  Plot_freq.py  Read_json copy.py  SC.py  Wind.py  Wind_dyn.py  Write_to_JSON.py  Write_to_JSON_SC.py  Write_to_JSON_multiple.py  Write_to_JSON_multiple_SC.py  k2a_HVDC_wind.py  my_dyn_loads.py  my_k2a.py  my_k2a_wind.py
inertia copy/: Read_json.py
notebooks/: k2a-simple_dyn_sim.ipynb  modal_analysis.ipynb
ps_models/: ieee39.py  k2a.py  k2a_val.py  n44.py  n44_mod.py  sm_ib.py  sm_ib_ctrl_pss.py  sm_load.py
tests/: simple_dynamic_simulation.py
(+188 files in other folders)
