[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tops"
description = 'Tiny open power system simulator'
readme = "README.md"
requires-python = ">=3.7"
license = {file="LICENSE"}
version = "0.2.0"
keywords = []
authors = [
  { name = "Hallvar Haugdal", email = "hallvar.haugdal@sintef.no" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "TOPS-Circuits @ file:///Users/hallvar/Koding/TOPS-Circuits",
]

[project.urls]
"Homepage" = "https://github.com/hallvar-h/TOPS"
"Bug Tracker" = "https://github.com/hallvar-h/TOPS/issues"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "-e file:///Users/hallvar/Koding/TOPS-Circuits#egg=TOPS-Circuits",
]
