[metadata]
name = dynpssimpy
version = 0.0.1
author = Hallvar Haugdal
author_email = hallvar.haugdal@sintef.no
description = Dynamic power system simulation in Python..
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hallvar-h/DynPSSimPy
project_urls =
    Bug Tracker = https://github.com/hallvar-h/DynPSSimPy/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent

#packages =
#    dynpssimpy

# [options]
#package_dir =
	#= dynpssimpy
# packages = find:

# [options.packages.find]
# where = dynpssimpy
#include = dynpssimpy*
#exclude = binder, ps_models

